--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ nav {
     margin-top: 36px;
     margin-bottom: 30px;
 }
+/* nav a {
+    background:  url(assets/logo.png) no-repeat;
+} */
 .links {
     position: absolute;
     left: 222.4px;
@@ -39,11 +42,11 @@ main {
 }
 
 .main{
-    border-radius: 8px;
+    border-radius: 30px;
     width: 940px;
     height: 366px;
 
-    background: pink url(assets/chef.png) no-repeat;
+    background: #FBDFDB url(assets/chef.png) no-repeat;
     background-position: bottom right 100px;
 
     display: flex;
@@ -75,6 +78,8 @@ section {
 }
 section h3 {
     margin-bottom: 20px;
+    font-size: 24px;
+    font-weight: bold;
 }
 
 .mostaccessed {
@@ -91,5 +96,144 @@ section h3 {
     display: grid;
 
     grid-template-columns: 300px 300px 300px;
-    background-color: slategrey;
+    gap: 20px;
+}
+
+.prato img {
+    width: 300px;
+    height: auto;
+    border-radius: 15px;
+}
+.prato h4 {
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.prato p {
+    font-size: 14px;
+    color: #777777;
+}
+
+/* ===FOOTER=== */
+
+footer {
+    margin-top: 50px;
+    height: 62px;
+    background-color: #eeeeee;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    font-size: 14px;
+    color: #999999;
+
+}
+
+/* ===SOBRE=== */
+.box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    margin-top: 20px;
+}
+.content {
+    display: flex;
+    flex-direction: column;
+}
+
+.content p {
+    font-size: 18px;
+    line-height: 28px;
+    text-align: justify;
+    margin-bottom: 28px;
+
+    width: 940px;
+    color: #444444;
+}
+
+.content h4 {
+    font-size: 20px;
+    margin: 2px 0 28px;
+}
+
+/* === MODAL === */
+
+.modal-overlay {
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    /* Justificar o modal */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    opacity: 0;
+    visibility: hidden;
+    
+}
+
+.modal {
+    background-color: white;
+    width: 660px;
+    height: 413px;
+    border-radius: 16px;
+    
+    position: relative;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.modal .close-modal {
+    position: absolute;
+
+    font-size: 16px;
+    color: #999999;
+
+    bottom: 30px;
+    
+    cursor: pointer;
+}
+
+/* === MODAL ACTIVE === */
+
+.modal-overlay.active {
+    opacity: 1;
+    visibility: visible;
+}
+/* === MODAL CONTENT ==== */
+.modal-content {
+    display: flex;
+    justify-content: center;
+}
+.modal-content img {
+    object-fit: cover;
+    width: 600px;
+    height: 200px;
+
+    position: absolute;
+    top: 30px;
+}
+.modal-content h4 {
+    position: absolute;
+    bottom: 135px;
+
+    font-weight: 400;
+    text-align: center;
+    font-size: 24px;
+    width: 100%;
+}
+.modal-content p {
+    position: absolute;
+    bottom: 109px;
+
+    font-weight: 400;
+    font-size: 18px;
+    color: #777777;
 }
