--- a/views/layout.njk
+++ b/views/layout.njk
@@ -30,6 +30,10 @@
         <p>Todos direitos reservados, receitas, Foodfy
         </p>
     </footer>
-    <script src="script.js"></script>
+
+    {% block script %}
+        <script src="script.js"></script>
+    {% endblock %}
+    
 </body>
 </html>
