--- a/views/layout.njk
+++ b/views/layout.njk
@@ -31,9 +31,6 @@
         </p>
     </footer>
 
-    {% block script %}
-        <script src="script.js"></script>
-    {% endblock %}
-    
+    <script src="/script.js"></script>
 </body>
 </html>
