--- a/views/prato.njk
+++ b/views/prato.njk
@@ -13,7 +13,7 @@
 
             <div class="partial">
                 <div class="head">
-                    <h5>Ingredientes</h5><button id="ingredientes" class="button">mostrar</button>
+                    <h5>Ingredientes</h5><button id="ingredientes" class="button">ocultar</button>
                 </div>
 
                 <a id="ingredientes"><p><ul>
@@ -25,7 +25,7 @@
 
             <div class="partial">
                 <div class="head">
-                    <h5>Modo de preparo</h5><button id="mod" class="button">mostrar</button>
+                    <h5>Modo de preparo</h5><button id="mod" class="button">ocultar</button>
                 </div>
 
                 <a id="mod"><p>{{receita.preparation}}</p></a>
@@ -33,9 +33,9 @@
 
             <div class="partial">
                 <div class="head">
-                    <h5>Informações Adicinais</h5><button id="infos" class="button">mostrar</button>
+                    <h5>Informações Adicinais</h5><button id="infos" class="button">ocultar</button>
                 </div>
-                
+
                 <a id="infos"><p>{{receita.information}}</p></a>
             </div>
 
