--- a/views/home.njk
+++ b/views/home.njk
@@ -17,10 +17,10 @@
 
                 <div class="pratos">
                     {% for data in datas %}
-                        <div class="prato" id="{{data.title}}">
+                        <div class="prato" id="{{data.id}}">
                             <img src="{{data.image}}" alt="{{data.title}}">
                             <h4 class="nome-do-prato" >{{data.title}}</h4>
-                            <p class="chef" >pelo chef, {{data.author}}</p>
+                            <p class="chef">por {{data.author}}</p>
                         </div>
                     {% endfor %}
                     
