--- a/views/admin/layout.njk
+++ b/views/admin/layout.njk
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    {% block head %}
+    {% block headAdmin %}
         <title>Create</title>
-    {% endblock head %}
+    {% endblock %}
 </head>
 <body>
     <div class="content-admin">
-        <div class="header"><img src="/assets/logowhite.png" alt=""></div>
+        <div class="header">
+            <div>
+                <img src="/assets/logowhite.png" alt="">
+            </div>
+        </div>
         
-    {% block contentAdmin %}
-    {% endblock contentAdmin %}
+        {% block contentAdmin %}
+        {% endblock %}
 
     </div>
 </body>
