--- a/views/layout.njk
+++ b/views/layout.njk
@@ -5,7 +5,7 @@
     {% block head %}
         <title>Foodfy</title>
     {% endblock %}
-
+    <link rel="stylesheet" href="/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
