--- a/views/admin/create.njk
+++ b/views/admin/create.njk
@@ -14,24 +14,32 @@
 
                 <div class="input">
                     <h3>Imagem da Receita</h3>
-                    <input type="text" name="">
+                    <input 
+                    type="text" 
+                    name="image">
                 </div>
 
                 <div class="input">
                     <h3>Ingredientes</h3>
-                    <input type="text" name="" >
+                    <input
+                    type="text"
+                    name="ingredients">
                     <span>Adicionar novo ingrediente</span>
                 </div>
 
                 <div class="input">
                     <h3>Modo de preparo</h3>
-                    <input type="text" name="" >
+                    <input 
+                    type="text" 
+                    name="preparation" >
                     <span>Adicionar novo passo</span>
                 </div>
 
                 <div class="input more-infotmations">
                     <h3>Informações Adicionais</h3>
-                    <input type="text" name="" >
+                    <input 
+                    type="text" 
+                    name="information" >
                 </div>
             </div>
         </form>
