--- a/views/admin/edition.njk
+++ b/views/admin/edition.njk
@@ -1,5 +1,6 @@
 {% extends "admin/layout.njk" %}
-{% block head %}
+
+{% block headAdmin %}
     <title>Edition</title>
 {% endblock %}
 
@@ -14,24 +15,42 @@
 
             <div class="input">
                 <h3>Imagem da Receita</h3>
-                <input type="text" name="">
+                <input 
+                type="text"
+                value="{{data.image}}" 
+                name="image">
             </div>
 
             <div class="input">
                 <h3>Ingredientes</h3>
-                <input type="text" name="" >
+                <input 
+                type="text"
+                value=""
+                name="ingredients" >
                 <span>Adicionar novo ingrediente</span>
+                {% for ingredient in {{data.ingredients}} %}
+                    <span>ingredient</span>
+                {% endfor %}
             </div>
 
             <div class="input">
                 <h3>Modo de preparo</h3>
-                <input type="text" name="" >
+                <input 
+                type="text"
+                value=""
+                name="preparation" >
                 <span>Adicionar novo passo</span>
+                {% for mode in {{data.pepararion}} %}
+                <span>mode</span>
+                {% endfor %}
             </div>
 
             <div class="input more-infotmations">
                 <h3>Informações Adicionais</h3>
-                <input type="text" name="" >
+                <input 
+                type="text"
+                value="{{data.information}}"
+                name="information" >
             </div>
         </div>
     </form>
