--- a/views/admin/listing.njk
+++ b/views/admin/listing.njk
@@ -5,47 +5,63 @@
 {% endblock %}
 
 {% block contentAdmin %}
+<div class="manager">
+    <h2>Gerenciar receitas</h2> 
+</div>
+
 <div class="listing">
     <div class="recipe">
         <img src="https://rocketseat-cdn.s3-sa-east-1.amazonaws.com/launchbase/receitas/burger.png" alt="">
-        <h3>Triplo Burger</h3>
-        <p>por Bruno Santana</p>
-        <a href="">Visualizar</a>
+        <div>
+            <h3>Triplo Burger</h3>
+            <p>por Bruno Santana</p>
+            <a href="">Visualizar</a>
+        </div>
     </div>
 
     <div class="recipe">
         <img src="https://rocketseat-cdn.s3-sa-east-1.amazonaws.com/launchbase/receitas/burger.png" alt="">
-        <h3>Triplo Burger</h3>
-        <p>por Bruno Santana</p>
-        <a href="">Visualizar</a>
+        <div>
+            <h3>Triplo Burger</h3>
+            <p>por Bruno Santana</p>
+            <a href="">Visualizar</a>
+        </div>
     </div>
 
     <div class="recipe">
         <img src="https://rocketseat-cdn.s3-sa-east-1.amazonaws.com/launchbase/receitas/burger.png" alt="">
-        <h3>Triplo Burger</h3>
-        <p>por Bruno Santana</p>
-        <a href="">Visualizar</a>
+        <div>
+            <h3>Triplo Burger</h3>
+            <p>por Bruno Santana</p>
+            <a href="">Visualizar</a>
+        </div>
     </div>
 
     <div class="recipe">
         <img src="https://rocketseat-cdn.s3-sa-east-1.amazonaws.com/launchbase/receitas/burger.png" alt="">
-        <h3>Triplo Burger</h3>
-        <p>por Bruno Santana</p>
-        <a href="">Visualizar</a>
+        <div>
+            <h3>Triplo Burger</h3>
+            <p>por Bruno Santana</p>
+            <a href="">Visualizar</a>
+        </div>
     </div>
 
     <div class="recipe">
         <img src="https://rocketseat-cdn.s3-sa-east-1.amazonaws.com/launchbase/receitas/burger.png" alt="">
-        <h3>Triplo Burger</h3>
-        <p>por Bruno Santana</p>
-        <a href="">Visualizar</a>
+        <div>
+            <h3>Triplo Burger</h3>
+            <p>por Bruno Santana</p>
+            <a href="">Visualizar</a>
+        </div>
     </div>
 
     <div class="recipe">
         <img src="https://rocketseat-cdn.s3-sa-east-1.amazonaws.com/launchbase/receitas/burger.png" alt="">
-        <h3>Triplo Burger</h3>
-        <p>por Bruno Santana</p>
-        <a href="">Visualizar</a>
+        <div>
+            <h3>Triplo Burger</h3>
+            <p>por Bruno Santana</p>
+            <a href="">Visualizar</a>
+        </div>  
     </div>
 </div>
 
