:construction: post init

--- a/views/admin/create.njk
+++ b/views/admin/create.njk
@@ -23,14 +23,15 @@
 
                 <div class="input" id="ingredients">
                     <h3>Ingredientes</h3>
-                    <input
-                    type="text"
-                    name="ingredients">
-                    <span>Adicionar novo ingrediente</span>
-                    <ul>
-
-                    </ul>
+                    <div class="ingredient">
+                        <input
+                        type="text"
+                        value=""
+                        placeholder="Ingrediente"
+                        name="ingredients[]"/>
+                    </div>
                 </div>
+                <button class="add-ingredient" type="button">Adicionar novo ingrediente</button>
 
                 <div class="input" id="preparation">
                     <h3>Modo de preparo</h3>
