:construction: ingredients e preparations ok

--- a/views/admin/create.njk
+++ b/views/admin/create.njk
@@ -47,7 +47,7 @@
                 </div>
                 <button class="add-ingredient" type="button">Adicionar novo ingrediente</button>
 
-                <div class="input" id="preparation">
+                <div class="input" id="preparations">
                     <h3>Modo de preparo</h3>
                     <div class="preparation">
                         <input 
@@ -55,9 +55,9 @@
                         value=""
                         placeholder="preparation"
                         name="preparation[]"/>
-                        <span>Adicionar novo passo</span>
                     </div>
                 </div>
+                <button class="add-preparation" type="button">Adicionar nova etapa</button>
 
                 <div class="input more-infotmations">
                     <h3>Informações Adicionais</h3>
