:construction: put incomplete

--- a/views/admin/edit.njk
+++ b/views/admin/edit.njk
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block contentAdmin %}
-    <form class="content-body" method="POST" action="/instructors?_method=PUT">   
+    <form class="content-body" method="POST" action="/admin/recipes?_method=PUT">   
         {% include 'admin/fields.njk'%}
     </form>
 {% endblock %}
