--- a/views/receita.njk
+++ b/views/receita.njk
@@ -1,15 +1,15 @@
 {% extends "layout.njk" %}
 
 {% block head %}
-    <title>{{receita.title}}</title>
+    <title>{{recipe.title}}</title>
 {% endblock %}
 
 {% block content %}
 
     <div class="banner">
-        <img src="{{receita.image}}" alt="{{receita.title}}">
-        <h4 class="nome-do-prato" >{{receita.title}}</h4>
-        <p class="chef">por {{receita.author}}</p>
+        <img src="{{recipe.image}}" alt="{{recipe.title}}">
+        <h4 class="nome-do-prato" >{{recipe.title}}</h4>
+        <p class="chef">por {{recipe.author}}</p>
         <div class="description">
 
             <div class="partial">
@@ -18,7 +18,7 @@
                 </div>
 
                 <a id="ingredientes"><p><ul>
-                    {% for item in receita.ingredients %}
+                    {% for item in recipe.ingredients %}
                         <li>{{item}}</li>
                     {% endfor %}
                 </ul></a>
@@ -29,7 +29,7 @@
                     <h5>Modo de preparo</h5><button id="mod" class="button">ocultar</button>
                 </div>
 
-                <a id="mod"><p>{{receita.preparation}}</p></a>
+                <a id="mod"><p>{{recipe.preparation}}</p></a>
             </div>
 
             <div class="partial">
@@ -37,7 +37,7 @@
                     <h5>Informações Adicinais</h5><button id="infos" class="button">ocultar</button>
                 </div>
 
-                <a id="infos"><p>{{receita.information}}</p></a>
+                <a id="infos"><p>{{recipe.information}}</p></a>
             </div>
 
         </div>
