:construction: put complete

--- a/public/style.css
+++ b/public/style.css
@@ -255,6 +255,7 @@ footer {
     width: 940px;
     height: 280px;
     border-radius: 15px;
+    object-fit: cover;
 }
 .banner h4 {
     margin-top: 50px;
