:white_check_mark: routes and recipes.js

--- a/views/admin/create.njk
+++ b/views/admin/create.njk
@@ -6,6 +6,7 @@
 
 {% block contentAdmin %}
     <form class="content-body" method="POST" action="/admin/recipes">
+        <h3>Nova Receita</h3>
         {% include 'admin/fields.njk'%}
     </form>
 {% endblock %}
