--- a/views/admin/edit.njk
+++ b/views/admin/edit.njk
@@ -6,14 +6,16 @@
 
 {% block contentAdmin %}
 
-    <form class="content-body" method="POST" action="/admin/recipes?_method=PUT">   
+    <form class="content-body" method="POST" action="/admin/recipes?_method=PUT">
+        <h3>Editar Receita</h3>
         {% include 'admin/fields.njk'%}
+        <input type="hidden" name="id" value={{recipe.id}}>
     </form>
 
      <form class="form-delete" action="/admin/recipes?_method=DELETE" method="post">
 
-            <input type="hidden" name="id" value={{recipe.id}}>
-            <button type="submit">Deletar</button>
-        
-        </form>
+        <input type="hidden" name="id" value={{recipe.id}}>
+        <button type="submit">Deletar</button>
+    
+    </form>
 {% endblock %}
